--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,10 @@
         </a>
         <a href="galery.html">
             <div class="textH">GALERY</div>
-        </a>       
+        </a>
+        <a href="idk.php">
+            <div class="textH">PHP TEST</div>
+        </a>        
         
     </div>
     <div class="header1"></div>
