--- a/galery.html
+++ b/galery.html
@@ -20,7 +20,7 @@
             <img src="pictures/AutWorld_Logo.webp" alt="logo" class="rozmerL">
         </a>
         
-        <a href="index.html" >
+        <a href="index.php" >
             <div class="textH">HOME</div>
         </a>
         <a href="about_us.html">
