--- a/about_us.html
+++ b/about_us.html
@@ -16,11 +16,11 @@
     <!-- header -->
     <div class="header">
         
-        <a href="index.html" class="logo">
+        <a href="./" class="logo">
             <img src="pictures/AutWorld_Logo.webp" alt="logo" class="rozmerL">
         </a>
         
-        <a href="index.html">
+        <a href="./">
             <div class="textH">HOME</div>
         </a>
         <a href="about_us.html" class="on_page">
