--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <a href="./" class="on_page">
             <div class="textH">HOME</div>
         </a>
-        <a href="/about_us">
+        <a href="./about_us">
             <div class="textH">ABOUT US</div>
         </a>
-        <a href="/faq">
+        <a href="./faq">
             <div class="textH">FAQ</div>
         </a>
         
