--- a/about_us.html
+++ b/about_us.html
@@ -23,13 +23,13 @@
         <a href="./">
             <div class="textH">HOME</div>
         </a>
-        <a href="about_us.html" class="on_page">
+        <a href="./about_us" class="on_page">
             <div class="textH">ABOUT US</div>
         </a>
-        <a href="faq.html">
+        <a href="./faq">
             <div class="textH">FAQ</div>
         </a>
-        <a href="galery.html">
+        <a href="./galery">
             <div class="textH">GALERY</div>
         </a>       
         
