--- a/faq.html
+++ b/faq.html
@@ -23,16 +23,16 @@
         <a href="./">
             <div class="textH">HOME</div>
         </a>
-        <a href="about_us.html">
+        <a href="./about_us">
             <div class="textH">ABOUT US</div>
         </a>
-        <a href="faq.html" class="on_page">
+        <a href="./faq" class="on_page">
             <div class="textH">FAQ</div>
         </a>
-        <a href="galery.html">
+        <a href="./galery">
             <div class="textH">GALERY</div>
         </a>
-        <a href="idk.php">
+        <a href="./idk">
             <div class="textH">PHP TEST</div>
         </a>        
         
