--- a/galery.html
+++ b/galery.html
@@ -23,14 +23,14 @@
         <a href="./" >
             <div class="textH">HOME</div>
         </a>
-        <a href="about_us.html">
+        <a href="./about_us">
             <div class="textH">ABOUT US</div>
         </a>
-        <a href="faq.html">
+        <a href="./faq">
             <div class="textH">FAQ</div>
         </a>
         
-        <a href="galery.html" class="on_page">
+        <a href="./galery" class="on_page">
             <div class="textH">GALERY</div>
         </a>
         
