--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="pictures/sekzi boj.jpg" sizes="16x16">
+    <link rel="icon" type="image/png" href="pictures/AutWorld_Logo.webp" sizes="16x16">
     <title>About Us</title>
     
    
