--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
         <a href="./galery">
             <div class="textH">GALERY</div>
         </a>
-        <a href="./idk">
+        <a href="idk.php">
             <div class="textH">PHP TEST</div>
         </a>        
         
